build/log/idf_py_stdout_output_14772
Command: ninja all
[1/30] Linking C static library esp-idf\esp_driver_rmt\libesp_driver_rmt.a
[2/30] Linking C static library esp-idf\esp_driver_dac\libesp_driver_dac.a
[3/30] Linking C static library esp-idf\esp_driver_ledc\libesp_driver_ledc.a
[4/30] Linking C static library esp-idf\esp_driver_pcnt\libesp_driver_pcnt.a
[5/30] Linking C static library esp-idf\esp_driver_mcpwm\libesp_driver_mcpwm.a
[6/30] Linking C static library esp-idf\esp_driver_sdio\libesp_driver_sdio.a
[7/30] Linking C static library esp-idf\esp_driver_sdm\libesp_driver_sdm.a
[8/30] Linking C static library esp-idf\esp_driver_touch_sens\libesp_driver_touch_sens.a
[9/30] Linking C static library esp-idf\esp_driver_twai\libesp_driver_twai.a
[10/30] Linking C static library esp-idf\esp_eth\libesp_eth.a
[11/30] Linking C static library esp-idf\esp_hid\libesp_hid.a
[12/30] Linking C static library esp-idf\esp_lcd\libesp_lcd.a
[13/30] Linking C static library esp-idf\esp_local_ctrl\libesp_local_ctrl.a
[14/30] Building C object esp-idf/htu21d/CMakeFiles/__idf_htu21d.dir/htu21d.c.obj
FAILED: esp-idf/htu21d/CMakeFiles/__idf_htu21d.dir/htu21d.c.obj 
ccache C:\Users\aubrey\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1-1-gee08b4d1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/aubrey/Documents/Development/smart_agri_system/build/config -IC:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/esp32/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2s/esp32/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include/apps -IC:/esp/v6.0.1/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0.1/esp-idf/components/driver/i2c/include -IC:/esp/v6.0.1/esp-idf/components/driver/touch_sensor/include -IC:/esp/v6.0.1/esp-idf/components/driver/twai/include -IC:/esp/v6.0.1/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2c/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_i2c/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_twai/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_twai/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_touch_sens/esp32/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_touch_sens/include @"C:/Users/aubrey/Documents/Development/smart_agri_system/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/aubrey/Documents/Development/smart_agri_system=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/htu21d/CMakeFiles/__idf_htu21d.dir/htu21d.c.obj -MF esp-idf\htu21d\CMakeFiles\__idf_htu21d.dir\htu21d.c.obj.d -o esp-idf/htu21d/CMakeFiles/__idf_htu21d.dir/htu21d.c.obj -c C:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d/htu21d.c
In file included from C:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d/htu21d.h:4,
                 from C:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d/htu21d.c:1:
C:/esp/v6.0.1/esp-idf/components/driver/i2c/include/driver/i2c.h:13:9: note: '#pragma message: 
================================ CRITICAL WARNING ================================
This legacy I2C driver (driver/i2c.h) is officially END-OF-LIFE (EOL) as of ESP-IDF v6.0.

1. NO SUPPORT: ESP-IDF will not provide updates, bug fixes, or security patches timely.
2. PLANNED REMOVAL: This driver WILL BE REMOVED in ESP-IDF v7.0 (next major release).
3. ACTION REQUIRED: Migrate to 'driver/i2c_master.h' or 'driver/i2c_slave.h' immediately.
   - If you are a library maintainer, please update your code.
   - If you are using 3rd-party libraries, contact the authors for updates.

4. SUPPRESS WARNING: Set Kconfig 'CONFIG_I2C_SUPPRESS_DEPRECATE_WARN=y' to silent
   this warning. However, by doing so, YOU ASSUME ALL RISKS including potential
   security vulnerabilities, system instability, and future incompatibility.

For API reference of the new I2C driver, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/peripherals/i2c.html
For other items about migration, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/migration-guides/index.html
==================================================================================
   '
   13 | #pragma message("\n" \
      |         ^~~~~~~
C:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d/htu21d.c: In function 'htu21d_read_temperature':
C:/Users/aubrey/Documents/Development/smart_agri_system/components/htu21d/htu21d.c:90:9: error: expected ';' before 'return'
   90 |         return HTU21D_ERR_CRC;
      |         ^~~~~~
[15/30] Linking C static library esp-idf\fatfs\libfatfs.a
[16/30] Linking C static library esp-idf\perfmon\libperfmon.a
[17/30] Linking C static library esp-idf\rt\librt.a
[18/30] Linking C static library esp-idf\spiffs\libspiffs.a
[19/30] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/shared_data.c.obj
ninja: build stopped: subcommand failed.
